# lang-model

./: .clang-format  CMakeLists.txt  README.md  requirements.txt
.github/workflows/: cmake-multi-platform.yml  gcc-clang-linux-workflow.yml  msvc-windows-workflow.yml
cmake/: get_fmt.cmake  get_gtest.cmake  get_magic_enum.cmake
include/lang-model/: exp_type.hpp  expr.hpp  expr_type.hpp  expression.hpp  promt.hpp
include/lang-model/ast/: expression.hpp  visitor.hpp
include/lang-model/ast/expr/: binary.hpp  grouping.hpp  literal.hpp  unary.hpp
include/lang-model/ast/visit/: ast_printer.hpp
include/lang-model/legacy/: const_expr.hpp  expr_visitor.hpp
include/lang-model/parser/: file_reader.hpp  grammar_parser.hpp  lexer.hpp  parse_error.hpp  scanner.hpp  token.hpp  tokenizer.hpp
include/lang-model/tools/: error_handler.hpp  interpreter.hpp  promt.hpp
include/lang-model/utils/: error_handler.hpp  interpreter.hpp  utils.hpp
interpreter/: CMakeLists.txt
interpreter/src/: interpreter.cpp  main.cpp
src/: expr.cpp  expr_visitor.cpp  promt.cpp
src/ast/expr/: binary.cpp  grouping.cpp  literal.cpp  unary.cpp
src/ast/visit/: ast_printer.cpp
src/parser/: file_reader.cpp  grammar_parser.cpp  lexer.cpp  parse_error.cpp  scanner.cpp  token.cpp  tokenizer.cpp
src/tools/: error_handler.cpp  interpreter.cpp  promt.cpp
src/utils/: error_handler.cpp  interpreter.cpp
tests/: CMakeLists.txt  tests.cpp
tests/ast/: ast_printer_tests.cpp
tests/parser/: file_reader_tests.cpp  grammar_parser_tests.cpp  lexer_tests.cpp  scanner_tests.cpp  tokenizer_tests.cpp
tools/: CMakeLists.txt
tools/ast_generator/: CMakeLists.txt
tools/ast_generator/src/: ast_generator.cpp
tools/interpreter/: CMakeLists.txt
tools/interpreter/src/: main.cpp
